# myyoga

./: .gitignore  README.md  docker-compose-dev.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/: ARCHITECTURE.md
frontend/: .oxlintrc.json  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/assets/css/: main.css
frontend/app/components/: BaseFooter.vue  BaseHero.vue  BaseNavbar.vue
frontend/app/components/base/: BottomCta.vue  Hero.vue  IconCircle.vue  MobileSidebar.vue  Navbar.vue  Overview.vue  Quote.vue  SectionContainer.vue  SimpleHeader.vue
frontend/app/layouts/: default.vue
frontend/app/pages/: booking.vue  gallery.vue  index.vue  what-is-yoga.vue
frontend/app/pages/research/: [id].vue
frontend/app/types/: index.ts
frontend/i18n/locales/: fr-FR.ts
frontend/test/e2e/: ssr.test.ts
frontend/test/nuxt/: BaseBooking.nuxt.spec.ts  BaseHero.nuxt.spec.ts  BaseNavbarFooter.nuxt.spec.ts  Home.nuxt.spec.ts
frontend/types/: index.ts
frontends/mainsite/: .gitignore  .oxlintrc.json  nuxt.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontends/mainsite/app/: app.vue  error.vue
frontends/mainsite/app/composables/: index.ts
frontends/mainsite/coverage/: coverage-final.json  index.html
infrastructure/docker/env/: automation.env
services/pdfapi/: .gitignore  Dockerfile  README.md  app.py  constants.py  fastmcp.json  models.py  pyproject.toml  utils.py
services/pdfapi/resources/: resources.json
services/pdfapi/tests/: test_client.py  test_redis.py
(+46 files in other folders)
