[project]
name = "pdfapi"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp[standard,tasks]>=3.4.2",
    "httpx>=0.28.1",
    "py-key-value-aio[redis]>=0.4.5",
    "pydantic>=2.13.4",
    "pypdf[crypto]>=6.14.2",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-aio>=2.1.7",
    "pytest-celery>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-datafiles>=3.0.1",
    "pytest-env>=1.6.0",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.20",
]

[tool.pyright]
typeCheckingMode = "off"
reportMissingImports = true
reportUntypedBaseClass = true

[tool.pytest]
# timeout=5000
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "api: marks tests as api tests",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.pytest.ini_options]

[tool.pytest_env]
env_files = [".env", ".env.test"]


[tool.autopep8]
max_line_length = 120
# ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
